[gd_scene load_steps=21 format=3 uid="uid://3ylejm3djaqa"]

[ext_resource type="Script" path="res://scenes/UI/ability_upgrade_card.gd" id="1_irgyj"]
[ext_resource type="PackedScene" uid="uid://cc7gsjrgovjk" path="res://scenes/component/random_audio_stream_player_component.tscn" id="2_l4utd"]
[ext_resource type="AudioStream" uid="uid://b8ne47o81xjkk" path="res://assets/audio/switch1.ogg" id="3_g2geo"]
[ext_resource type="AudioStream" uid="uid://e3ag0w6ey4x2" path="res://assets/audio/switch2.ogg" id="4_eymju"]
[ext_resource type="AudioStream" uid="uid://bnbqaqsosudfr" path="res://assets/audio/switch3.ogg" id="5_5l36c"]
[ext_resource type="AudioStream" uid="uid://crx7da3sxcxcr" path="res://assets/audio/switch4.ogg" id="6_m7jdn"]
[ext_resource type="AudioStream" uid="uid://bsg6vvvor0wqk" path="res://assets/audio/switch5.ogg" id="7_f110q"]
[ext_resource type="AudioStream" uid="uid://c8jytwwygx3uj" path="res://assets/audio/switch6.ogg" id="8_fqdkv"]
[ext_resource type="AudioStream" uid="uid://kbfvoxsu875" path="res://assets/audio/switch7.ogg" id="9_pgl64"]
[ext_resource type="AudioStream" uid="uid://cdvbc4k31rgyl" path="res://assets/audio/switch8.ogg" id="10_x382d"]
[ext_resource type="AudioStream" uid="uid://cv0plrif8cx7d" path="res://assets/audio/switch9.ogg" id="11_1iv2b"]
[ext_resource type="AudioStream" uid="uid://cgrskkejg58rn" path="res://assets/audio/switch10.ogg" id="12_kkonh"]

[sub_resource type="Animation" id="Animation_trthg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_04jre"]
resource_name = "discard"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xhjuo"]
resource_name = "in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qjjqr"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 3.14159]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0k51"]
_data = {
"RESET": SubResource("Animation_trthg"),
"discard": SubResource("Animation_04jre"),
"in": SubResource("Animation_xhjuo"),
"selected": SubResource("Animation_qjjqr")
}

[sub_resource type="Animation" id="Animation_31pkt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_1sxeb"]
resource_name = "hover"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverPlayerComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8og6h"]
_data = {
"RESET": SubResource("Animation_31pkt"),
"hover": SubResource("Animation_1sxeb")
}

[node name="AbilityUpgradeCard" type="PanelContainer" groups=["upgrade_card"]]
custom_minimum_size = Vector2(150, 150)
pivot_offset = Vector2(75, 75)
script = ExtResource("1_irgyj")

[node name="HoverPlayerComponent" parent="." instance=ExtResource("2_l4utd")]
volume_db = -7.051
streams = Array[AudioStream]([ExtResource("3_g2geo"), ExtResource("4_eymju"), ExtResource("5_5l36c"), ExtResource("6_m7jdn"), ExtResource("7_f110q"), ExtResource("8_fqdkv"), ExtResource("9_pgl64"), ExtResource("10_x382d"), ExtResource("11_1iv2b"), ExtResource("12_kkonh")])

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_l4utd")]
streams = Array[AudioStream]([ExtResource("3_g2geo"), ExtResource("4_eymju"), ExtResource("5_5l36c"), ExtResource("6_m7jdn"), ExtResource("7_f110q"), ExtResource("8_fqdkv"), ExtResource("9_pgl64"), ExtResource("10_x382d"), ExtResource("11_1iv2b"), ExtResource("12_kkonh")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d0k51")
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8og6h")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.148438, 0.167969, 0.265625, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "Long Test"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 4
text = "Write out a long test description that spans multiple lines"
autowrap_mode = 2

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 4
text = "1/8"
